manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp
spec:
  to:
    kind: Service
    name: webapp
  port:
    targetPort: http
